--- a/_pages/en/open-source-code-orgs.html
+++ b/_pages/en/open-source-code-orgs.html
@@ -11,83 +11,135 @@ permalink: /open-source-code-orgs.html
       <details>
          <summary>Federal</summary>
          <div class="list-group">
-           {% for fptms in site.data.code %}
-        {% assign fptm = fptms[1] %}
-        {% for admins in fptm %}
-          {% assign admin = admins[1] %}
-          {% for release in admin.releases %}
-          {% assign aName = site.data.administrations.federal | where: "code", admin.adminCode %}
-          {% if aName[0].name[page.lang] != nil %}
-          <ul class="list-group">
-          <li class="list-group-item">
-          {% assign my_link =  release.repositoryURL[page.lang] | remove: "https://"| split: "/" %}
-          <a href="{{ release.repositoryURL[page.lang] | remove: my_link[2]}}" target="_blank">
-                  {% assign my_array =  release.repositoryURL[page.lang] | remove: "https://"| split: "/" %}
-                  {{my_array[1]}}
-              </a>
-              </li>
-              </ul>
-              {% endif %}
-              {% endfor %}
-        {% endfor %}
-      {% endfor %}
-
+            {% assign repo_array = "" | split: ','%}
+            {% for fptms in site.data.code %}
+            {% assign fptm = fptms[1] %}
+            {% for admins in fptm %}
+            {% assign admin = admins[1] %}
+            {% for release in admin.releases %}
+            {% assign aName = site.data.administrations.federal | where: "code", admin.adminCode %}
+            {% if aName[0].name[page.lang] != nil %}
+            {% if release.repositoryURL[page.lang] != nil %}
+            {% assign repo_url =  release.repositoryURL[page.lang] | remove: "https://"  | split: "/" %}
+            {% assign repo_size =  repo_url | size %}
+            {% if repo_size == 3  %}
+            {% assign org_url =  repo_url[0] | append: "/" |  append: repo_url[1]  %}
+            {% assign repo_array = repo_array | push: org_url%}
+            {% elsif repo_size == 4  %}
+            {% assign org_url =  repo_url[0] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[2]  %}
+            {% assign repo_array = repo_array | push: org_url %}
+            {% endif %}
+            {% endif %}
+            {% endif %}
+            {% endfor %}
+            {% endfor %}
+            {% endfor %}
+            
+            {% assign repo_array = repo_array | sort: "name" | uniq %}
+            {% for repo in repo_array %}
+            {% assign org_name =  repo | remove: "https://"  | split: "/" %}
+            {% assign org_size =  org_name | size %}
+            {% if org_size == 2  %}
+            <a href="{{ "https://" | append: repo }}" target="_blank">
+            <option value="{{ org_name[1] }}">{{ org_name[1] }} </option>
+            </a>
+            {% elsif org_size == 3  %}
+            <a href="{{ "https://" | append: repo }}" target="_blank">  
+            <option value="{{ org_name[2] }}">{{ org_name[2] }} </option>
+            </a>
+            {% endif %}
+            {% endfor %}
          </div>
       </details>
    </li>
-    <li>
+   <li>
       <details>
          <summary>Provincial</summary>
          <div class="list-group">
-           {% for fptms in site.data.code %}
-        {% assign fptm = fptms[1] %}
-        {% for admins in fptm %}
-          {% assign admin = admins[1] %}
-          {% for release in admin.releases %}
-          {% assign aName = site.data.administrations.provincial | where: "code", admin.adminCode %}
+            {% assign repo_array = "" | split: ','%}
+            {% for fptms in site.data.code %}
+            {% assign fptm = fptms[1] %}
+            {% for admins in fptm %}
+            {% assign admin = admins[1] %}
+            {% for release in admin.releases %}
+            {% assign aName = site.data.administrations.provincial | where: "code", admin.adminCode %}
             {% if aName[0].name[page.lang] != nil %}
-         <ul class="list-group">
-          <li class="list-group-item">
-          {% assign my_link =  release.repositoryURL[page.lang] | remove: "https://"| split: "/" %}
-          <a href="{{ release.repositoryURL[page.lang] | remove: my_link[2]}}" target="_blank">
-                  {% assign my_array =  release.repositoryURL[page.lang] | remove: "https://"| split: "/" %}
-                  {{my_array[1] }}
-              </a>
-              </li>
-              </ul>
-              {% endif %}
-              {% endfor %}
-        {% endfor %}
-      {% endfor %}
+            {% if release.repositoryURL[page.lang] != nil %}
+            {% assign repo_url =  release.repositoryURL[page.lang] | remove: "https://"  | split: "/" %}
+            {% assign repo_size =  repo_url | size %}
+            {% if repo_size == 3  %}
+            {% assign org_url =  repo_url[0] | append: "/" |  append: repo_url[1]  %}
+            {% assign repo_array = repo_array | push: org_url%}
+            {% elsif repo_size == 4  %}
+            {% assign org_url =  repo_url[0] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[2]  %}
+            {% assign repo_array = repo_array | push: org_url %}
+            {% endif %}
+            {% endif %}
+            {% endif %}
+            {% endfor %}
+            {% endfor %}
+            {% endfor %}
 
+            {% assign repo_array = repo_array | sort: "name" | uniq %}
+            {% for repo in repo_array %}
+            {% assign org_name =  repo | remove: "https://"  | split: "/" %}
+            {% assign org_size =  org_name | size %}
+            {% if org_size == 2  %}
+            <a href="{{ "https://" | append: repo }}" target="_blank">
+            <option value="{{ org_name[1] }}">{{ org_name[1] }} </option>
+            </a>
+            {% elsif org_size == 3  %}
+            <a href="{{ "https://" | append: repo }}" target="_blank">  
+            <option value="{{ org_name[2] }}">{{ org_name[2] }} </option>
+            </a>
+            {% endif %}
+            {% endfor %}
          </div>
       </details>
    </li>
    <li>
       <details>
       <summary>Municipal</summary>
-     <div class="list-group">
-           {% for fptms in site.data.code %}
-        {% assign fptm = fptms[1] %}
-        {% for admins in fptm %}
-          {% assign admin = admins[1] %}
-          {% for release in admin.releases %}
-          {% assign aName = site.data.administrations.municipal | where: "code", admin.adminCode %}
-            {% if aName[0].name[page.lang] != nil %}
-          <ul class="list-group">
-          <li class="list-group-item">
-          {% assign my_link =  release.repositoryURL[page.lang] | remove: "https://"| split: "/" %}
-          <a href="{{ release.repositoryURL[page.lang] | remove: my_link[2]}}" target="_blank">
-                  {% assign my_array =  release.repositoryURL[page.lang] | remove: "https://"| split: "/" %}
-                  {{my_array[1]}}
-              </a>
-              </li>
-              </ul>
-              {% endif %}
-              {% endfor %}
-        {% endfor %}
-      {% endfor %}
-         </div>
+      <div class="list-group">
+         {% assign repo_array = "" | split: ','%}
+         {% for fptms in site.data.code %}
+         {% assign fptm = fptms[1] %}
+         {% for admins in fptm %}
+         {% assign admin = admins[1] %}
+         {% for release in admin.releases %}
+         {% assign aName = site.data.administrations.municipal | where: "code", admin.adminCode %}
+         {% if aName[0].name[page.lang] != nil %}
+         {% if release.repositoryURL[page.lang] != nil %}
+         {% assign repo_url =  release.repositoryURL[page.lang] | remove: "https://"  | split: "/" %}
+         {% assign repo_size =  repo_url | size %}
+         {% if repo_size == 3  %}
+         {% assign org_url =  repo_url[0] | append: "/" |  append: repo_url[1]  %}
+         {% assign repo_array = repo_array | push: org_url%}
+         {% elsif repo_size == 4  %}
+         {% assign org_url =  repo_url[0] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[2]  %}
+         {% assign repo_array = repo_array | push: org_url %}
+         {% endif %}
+         {% endif %}
+         {% endif %}
+         {% endfor %}
+         {% endfor %}
+         {% endfor %}
+
+         {% assign repo_array = repo_array | sort: "name" | uniq %}
+         {% for repo in repo_array %}
+         {% assign org_name =  repo | remove: "https://"  | split: "/" %}
+         {% assign org_size =  org_name | size %}
+         {% if org_size == 2  %}
+         <a href="{{ "https://" | append: repo }}" target="_blank">
+         <option value="{{ org_name[1] }}">{{ org_name[1] }} </option>
+         </a>
+         {% elsif org_size == 3  %}
+         <a href="{{ "https://" | append: repo }}" target="_blank">  
+         <option value="{{ org_name[2] }}">{{ org_name[2] }} </option>
+         </a>
+         {% endif %}
+         {% endfor %}
+      </div>
       <details>
    </li>
 </ul>
