--- a/_pages/en/open-source-code-orgs.html
+++ b/_pages/en/open-source-code-orgs.html
@@ -4,7 +4,7 @@ ref: codeOrgs
 lang: en
 permalink: /en/open-source-code-orgs.html
 ---
-<h1 property="name" id="wb-cont">Open Source Code Organizations</h1>
+<h1 property="name" id="wb-cont">Open Source Code Groups</h1>
 <p>Canadian public administrations at the federal, provincial, territorial and municipal level use Github, Gitlab and others code repositories to contribute to open source code.</p>
 
 {% include codeRepoOrgs.html %}
