--- a/_pages/en/open-source-standard-form.html
+++ b/_pages/en/open-source-standard-form.html
@@ -7,4 +7,4 @@ config: config-standard
 ---
 
 <h1 property="name" id="wb-cont">Form with validation for open standards</h1>
-<p>Click <a href="open-standard-schema.html">here</a> to know more informations about the metadata schema for open standards.</p>
+<p>Click <a href="open-source-standard-schema.html">here</a> to know more informations about the metadata schema for open standards.</p>
