--- a/_pages/fr/norme-ouverte-formulaire.html
+++ b/_pages/fr/norme-ouverte-formulaire.html
@@ -7,4 +7,4 @@ config: config-standard
 ---
 
 <h1 property="name" id="wb-cont">Formulaire avec validation des normes ouvertes</h1>
-<p>Appuyez <a href="./normes-ouvertes-schema.html">ici</a> pour en savoir plus sur le schéma de métadonnées pour le code source ouvert.</p>
+<p>Appuyez <a href="./norme-ouverte-schema.html">ici</a> pour en savoir plus sur le schéma de métadonnées pour le code source ouvert.</p>
