--- a/_pages/fr/code-source-ouvert-formulaire.html
+++ b/_pages/fr/code-source-ouvert-formulaire.html
@@ -6,5 +6,5 @@ permalink: /fr/code-source-ouvert-formulaire.html
 config: config-code
 ---
 
-<h1 property="name" id="wb-cont">Formulaire avec validation du code source ouvert</h1>
-<p>Appuyez <a href="code-source-ouvert-schema.html">ici</a> pour en savoir plus sur le schéma de métadonnées pour le code source ouvert.</p>
+<h1 property="name" id="wb-cont">Formulaire du code source ouvert</h1>
+<p>Remplissez ce formulaire pour ajouter ou mettre à jour des informations des projets source ouvert et les répertoires de code réalisés par les administrations publiques canadiennes.</p>
