--- a/_pages/en/open-source-standard-form.html
+++ b/_pages/en/open-source-standard-form.html
@@ -6,5 +6,5 @@ permalink: /en/open-source-standard-form.html
 config: config-standard
 ---
 
-<h1 property="name" id="wb-cont">Form with validation for open standards</h1>
-<p>Click <a href="open-source-standard-schema.html">here</a> to know more informations about the metadata schema for open standards.</p>
+<h1 property="name" id="wb-cont">Open Standards Form</h1>
+<p>Fill out this form to add or update information on open standards used by Canadian public administrations.</p>
