--- a/_pages/fr/norme-ouverte-formulaire.html
+++ b/_pages/fr/norme-ouverte-formulaire.html
@@ -6,5 +6,5 @@ permalink: /fr/norme-ouverte-formulaire.html
 config: config-standard
 ---
 
-<h1 property="name" id="wb-cont">Formulaire avec validation des normes ouvertes</h1>
-<p>Appuyez <a href="./norme-ouverte-schema.html">ici</a> pour en savoir plus sur le schéma de métadonnées pour le code source ouvert.</p>
+<h1 property="name" id="wb-cont">Formulaire des Normes Ouvertes</h1>
+<p>Remplissez ce formulaire pour ajouter ou modifier des données sur les standards et normes ouverts utilisés par les administrations publiques Canadiennes.</p>
